Fixing body params for swagger documentation
